src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Returns the set of flags that is suitable for parsing a translation<br>
	 * unit that is being edited.<br>
	 * * The set of flags returned provide options for \c clang_parseTranslationUnit()<br>
	 * to indicate that the translation unit is likely to be reparsed many times,<br>
	 * either explicitly (via \c clang_reparseTranslationUnit()) or implicitly<br>
	 * (e.g., by code completion (\c clang_codeCompletionAt())). The returned flag<br>
	 * set contains an unspecified set of optimizations (e.g., the precompiled <br>
	 * preamble) geared toward improving the performance of these routines. The<br>
	 * set of optimizations enabled may change from one version to the next.<br>
	 * Original signature : <code>int clang_defaultEditingTranslationUnitOptions()</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1089</i>
	 */
	int clang_defaultEditingTranslationUnitOptions();
	/**
	 * \brief Parse the given source file and the translation unit corresponding<br>
	 * to that file.<br>
	 * * This routine is the main entry point for the Clang C API, providing the<br>
	 * ability to parse a source file into a translation unit that can then be<br>
	 * queried by other functions in the API. This routine accepts a set of<br>
	 * command-line arguments so that the compilation can be configured in the same<br>
	 * way that the compiler is configured on the command line.<br>
	 * * \param CIdx The index object with which the translation unit will be <br>
	 * associated.<br>
	 * * \param source_filename The name of the source file to load, or NULL if the<br>
	 * source file is included in \p command_line_args.<br>
	 * * \param command_line_args The command-line arguments that would be<br>
	 * passed to the \c clang executable if it were being invoked out-of-process.<br>
	 * These command-line options will be parsed and will affect how the translation<br>
	 * unit is parsed. Note that the following options are ignored: '-c', <br>
	 * '-emit-ast', '-fsyntax-only' (which is the default), and '-o \<output file>'.<br>
	 * * \param num_command_line_args The number of command-line arguments in<br>
	 * \p command_line_args.<br>
	 * * \param unsaved_files the files that have not yet been saved to disk<br>
	 * but may be required for parsing, including the contents of<br>
	 * those files.  The contents and name of these files (as specified by<br>
	 * CXUnsavedFile) are copied when necessary, so the client only needs to<br>
	 * guarantee their validity until the call to this function returns.<br>
	 * * \param num_unsaved_files the number of unsaved file entries in \p<br>
	 * unsaved_files.<br>
	 * * \param options A bitmask of options that affects how the translation unit<br>
	 * is managed but not its compilation. This should be a bitwise OR of the<br>
	 * CXTranslationUnit_XXX flags.<br>
	 * * \returns A new translation unit describing the parsed code and containing<br>
	 * any diagnostics produced by the compiler. If there is a failure from which<br>
	 * the compiler cannot recover, returns NULL.<br>
	 * Original signature : <code>CXTranslationUnit clang_parseTranslationUnit(CXIndex, const char*, const const char**, int, CXUnsavedFile*, unsigned, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1133</i><br>
	 * @deprecated use the safer methods {@link #clang_parseTranslationUnit(com.sun.jna.Pointer, java.lang.String, byte[][], int, clang.CXUnsavedFile, int, int)} and {@link #clang_parseTranslationUnit(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.ptr.PointerByReference, int, clang.CXUnsavedFile, int, int)} instead
	 */
	@Deprecated
	ClangLibrary.CXTranslationUnit clang_parseTranslationUnit(Pointer CIdx, Pointer source_filename, PointerByReference command_line_args, int num_command_line_args, CXUnsavedFile unsaved_files, int num_unsaved_files, int options);
	/**
	 * \brief Parse the given source file and the translation unit corresponding<br>
	 * to that file.<br>
	 * * This routine is the main entry point for the Clang C API, providing the<br>
	 * ability to parse a source file into a translation unit that can then be<br>
	 * queried by other functions in the API. This routine accepts a set of<br>
	 * command-line arguments so that the compilation can be configured in the same<br>
	 * way that the compiler is configured on the command line.<br>
	 * * \param CIdx The index object with which the translation unit will be <br>
	 * associated.<br>
	 * * \param source_filename The name of the source file to load, or NULL if the<br>
	 * source file is included in \p command_line_args.<br>
	 * * \param command_line_args The command-line arguments that would be<br>
	 * passed to the \c clang executable if it were being invoked out-of-process.<br>
	 * These command-line options will be parsed and will affect how the translation<br>
	 * unit is parsed. Note that the following options are ignored: '-c', <br>
	 * '-emit-ast', '-fsyntax-only' (which is the default), and '-o \<output file>'.<br>
	 * * \param num_command_line_args The number of command-line arguments in<br>
	 * \p command_line_args.<br>
	 * * \param unsaved_files the files that have not yet been saved to disk<br>
	 * but may be required for parsing, including the contents of<br>
	 * those files.  The contents and name of these files (as specified by<br>
	 * CXUnsavedFile) are copied when necessary, so the client only needs to<br>
	 * guarantee their validity until the call to this function returns.<br>
	 * * \param num_unsaved_files the number of unsaved file entries in \p<br>
	 * unsaved_files.<br>
	 * * \param options A bitmask of options that affects how the translation unit<br>
	 * is managed but not its compilation. This should be a bitwise OR of the<br>
	 * CXTranslationUnit_XXX flags.<br>
	 * * \returns A new translation unit describing the parsed code and containing<br>
	 * any diagnostics produced by the compiler. If there is a failure from which<br>
	 * the compiler cannot recover, returns NULL.<br>
	 * Original signature : <code>CXTranslationUnit clang_parseTranslationUnit(CXIndex, const char*, const const char**, int, CXUnsavedFile*, unsigned, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1133</i>
	 */
	ClangLibrary.CXTranslationUnit clang_parseTranslationUnit(Pointer CIdx, String source_filename, byte[] command_line_args[], int num_command_line_args, CXUnsavedFile unsaved_files, int num_unsaved_files, int options);
	/**
	 * \brief Returns the set of flags that is suitable for saving a translation<br>
	 * unit.<br>
	 * * The set of flags returned provide options for<br>
	 * \c clang_saveTranslationUnit() by default. The returned flag<br>
	 * set contains an unspecified set of options that save translation units with<br>
	 * the most commonly-requested data.<br>
	 * Original signature : <code>int clang_defaultSaveOptions(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1164</i>
	 */
	int clang_defaultSaveOptions(ClangLibrary.CXTranslationUnit TU);
	/**
	 * \brief Saves a translation unit into a serialized representation of<br>
	 * that translation unit on disk.<br>
	 * * Any translation unit that was parsed without error can be saved<br>
	 * into a file. The translation unit can then be deserialized into a<br>
	 * new \c CXTranslationUnit with \c clang_createTranslationUnit() or,<br>
	 * if it is an incomplete translation unit that corresponds to a<br>
	 * header, used as a precompiled header when parsing other translation<br>
	 * units.<br>
	 * * \param TU The translation unit to save.<br>
	 * * \param FileName The file to which the translation unit will be saved.<br>
	 * * \param options A bitmask of options that affects how the translation unit<br>
	 * is saved. This should be a bitwise OR of the<br>
	 * CXSaveTranslationUnit_XXX flags.<br>
	 * * \returns A value that will match one of the enumerators of the CXSaveError<br>
	 * enumeration. Zero (CXSaveError_None) indicates that the translation unit was <br>
	 * saved successfully, while a non-zero value indicates that a problem occurred.<br>
	 * Original signature : <code>int clang_saveTranslationUnit(CXTranslationUnit, const char*, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1224</i><br>
	 * @deprecated use the safer methods {@link #clang_saveTranslationUnit(clang.ClangLibrary.CXTranslationUnit, java.lang.String, int)} and {@link #clang_saveTranslationUnit(clang.ClangLibrary.CXTranslationUnit, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated
	int clang_saveTranslationUnit(ClangLibrary.CXTranslationUnit TU, Pointer FileName, int options);
	/**
	 * \brief Saves a translation unit into a serialized representation of<br>
	 * that translation unit on disk.<br>
	 * * Any translation unit that was parsed without error can be saved<br>
	 * into a file. The translation unit can then be deserialized into a<br>
	 * new \c CXTranslationUnit with \c clang_createTranslationUnit() or,<br>
	 * if it is an incomplete translation unit that corresponds to a<br>
	 * header, used as a precompiled header when parsing other translation<br>
	 * units.<br>
	 * * \param TU The translation unit to save.<br>
	 * * \param FileName The file to which the translation unit will be saved.<br>
	 * * \param options A bitmask of options that affects how the translation unit<br>
	 * is saved. This should be a bitwise OR of the<br>
	 * CXSaveTranslationUnit_XXX flags.<br>
	 * * \returns A value that will match one of the enumerators of the CXSaveError<br>
	 * enumeration. Zero (CXSaveError_None) indicates that the translation unit was <br>
	 * saved successfully, while a non-zero value indicates that a problem occurred.<br>
	 * Original signature : <code>int clang_saveTranslationUnit(CXTranslationUnit, const char*, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1224</i>
	 */
	int clang_saveTranslationUnit(ClangLibrary.CXTranslationUnit TU, String FileName, int options);
	/**
	 * \brief Destroy the specified CXTranslationUnit object.<br>
	 * Original signature : <code>void clang_disposeTranslationUnit(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1231</i>
	 */
	void clang_disposeTranslationUnit(ClangLibrary.CXTranslationUnit CXTranslationUnit1);
	/**
	 * \brief Returns the set of flags that is suitable for reparsing a translation<br>
	 * unit.<br>
	 * * The set of flags returned provide options for<br>
	 * \c clang_reparseTranslationUnit() by default. The returned flag<br>
	 * set contains an unspecified set of optimizations geared toward common uses<br>
	 * of reparsing. The set of optimizations enabled may change from one version <br>
	 * to the next.<br>
	 * Original signature : <code>int clang_defaultReparseOptions(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:1257</i>
	 */
	int clang_defaultReparseOptions(ClangLibrary.CXTranslationUnit TU);
